--- a/1° Semestre - UNIGRANRIO/PRATICA DE PROGRAMAÇÃO EM SISTEMAS WEB/PWEB/Imagem.html
+++ b/1° Semestre - UNIGRANRIO/PRATICA DE PROGRAMAÇÃO EM SISTEMAS WEB/PWEB/Imagem.html
@@ -57,7 +57,7 @@
     <br>
 
     <h3>Imagem alinhada à esquerda com a primeira frase do texto posicionada no topo da imagem</h3>
-    <img src="Imagens/globo.jpg" alt="globo terrestre" width="100" height="100" align="top" vspace=10 hspace=10>
+    <img src="Imagens/globo.jpg" alt="globo terrestre" width="100" height="100" aling="top" vspace=10 hspace=10>
     O globo terrestre é uma representação em escala reduzida do planeta Terra. Com seu formato esférico, ele representa a superfície terrestre de maneira mais fiel que o planisfério.
 
     Sua forma é arredondada, porém, não permite a visualização de toda a superfície ao mesmo tempo, Se observamos o Brasil, por exemplo, não conseguimos ver o Japão, que fica no lado oposto do globo. Já no Mapa Planisfério conseguimos ver o Mapa-múndi em plano, vendo todos os países.
@@ -85,7 +85,7 @@
     <br>
 
     <h3>Imagem alinhada à esquerda com a primeira frase do texto posicionada no rodapé da imagem</h3>
-    <img src="Imagens/globo.jpg" alt="globo terrestre" width="100" height="100" aling="bottom" vspace=10 hspace=10>
+    <img src="imagens/globo.jpg" alt="globo terrestre" width="100" height="100" aling="bottom" vspace=10 hspace=10>
     O globo terrestre é uma representação em escala reduzida do planeta Terra. Com seu formato esférico, ele representa a superfície terrestre de maneira mais fiel que o planisfério.
 
     Sua forma é arredondada, porém, não permite a visualização de toda a superfície ao mesmo tempo, Se observamos o Brasil, por exemplo, não conseguimos ver o Japão, que fica no lado oposto do globo. Já no Mapa Planisfério conseguimos ver o Mapa-múndi em plano, vendo todos os países.
